--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <nav class="navbar navbar-expand-md navbar-dark">
             <div class="container">
                 <!--Logo-->
-                <a class="navbar-brand" href="#"><img src="images/logo/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="#"><img src="/Users/annsijaz/Downloads/ai-simple-letter-logo-design-1-af29ed2a8813f1048d4f661c3d74cf1cf9f3022ace3cea7b39478c5e2d0f804f.jpg" alt="logo"></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
