--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <section id="blog" class="wave-primary">
             <div class="container">
                 <h2 class="text-uppercase padbtm-40 text-center">Blogs</h2>
-                <div class="view-more-button"><a class='main-button' href='https://medium.com/@annsijaz'>Read Blogs</a></div>
+                <div class="view-more-button"><a class='main-button' href='https://github.com/louifranklyn/Data-Mining---Blogs/tree/main'>Read Blogs</a></div>
 
             </div>
             <!--Creative Background Wave-->
